--- a/W7/Nlp-text.ipynb
+++ b/W7/Nlp-text.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "84d3adda",
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1749,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "09cfcfc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1761,7 +1759,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "28fccd95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1772,7 +1769,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d6103b28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1782,7 +1778,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b170c6d8",
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1798,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "173c2e15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1813,7 +1807,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f2684437",
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1846,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e420383c",
    "metadata": {},
    "outputs": [
     {
@@ -1874,7 +1866,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "78e36caf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1884,7 +1875,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "65108795",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1894,7 +1884,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7145d669",
    "metadata": {
     "collapsed": true
    },
@@ -2241,7 +2230,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79b07b08",
    "metadata": {},
    "source": [
     "# cleaning/ wrangling steps:"
@@ -2249,7 +2237,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed694c23",
    "metadata": {},
    "source": [
     "- prepositions -for/in/the/a/in -'stop words'\n",
@@ -2263,7 +2250,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2712e4cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2273,7 +2259,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d31be4e2",
    "metadata": {},
    "outputs": [
     {
@@ -2619,7 +2604,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a80e0d96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2629,7 +2613,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9b8e2b62",
    "metadata": {},
    "outputs": [
     {
@@ -2650,7 +2633,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c8300929",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2660,7 +2642,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "60e9500c",
    "metadata": {},
    "outputs": [
     {
@@ -2681,7 +2662,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d503eb82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2691,7 +2671,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6c7fe339",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2701,7 +2680,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "13ffa2c7",
    "metadata": {},
    "outputs": [
     {
@@ -2719,7 +2697,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "50eea852",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2729,7 +2706,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2ed37797",
    "metadata": {},
    "outputs": [
     {
@@ -2750,7 +2726,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9ebfc595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2760,7 +2735,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "fd02348f",
    "metadata": {},
    "outputs": [
     {
@@ -2800,7 +2774,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8dcb3dc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2810,7 +2783,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4d638b05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2820,7 +2792,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e2ddefb3",
    "metadata": {},
    "outputs": [
     {
@@ -2841,7 +2812,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "91eb09c0",
    "metadata": {},
    "outputs": [
     {
@@ -2863,7 +2833,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "409acb62",
    "metadata": {},
    "outputs": [
     {
@@ -2886,7 +2855,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b9b3028e",
    "metadata": {},
    "outputs": [
     {
@@ -2910,7 +2878,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ff65028a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2920,7 +2887,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "619ca08a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2930,7 +2896,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "936f0985",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2938,7 +2903,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cfc91d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2948,7 +2912,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93762e61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2956,13 +2919,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35128661",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -2978,7 +2941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
